Refactor modal functionality to improve readability and add scroll-triggered modal display

--- a/src/scss/blocks/preview/_preview.scss
+++ b/src/scss/blocks/preview/_preview.scss
@@ -75,11 +75,11 @@
 }
 
 .show {
-    display: block;
+    display: block !important;
 }
 
 .hide {
-    display: none;
+    display: none !important;
 }
 
 .fade {
